# vector-os-nano

./: .gitignore  LICENSE  NOTICE  README.md  conftest.py  progress.md  pyproject.toml  run.py  sim.sh  test_agent_hardware.py
.sdd/: DEBUG.md  NEXT_SESSION.md  changelog.md  plan.md  spec.md  status.json  task.md
.sdd-v0.4.0/: plan.md  spec.md  status.json  task.md
.sdd/archive-gazebo/: plan.md  spec.md  status.json  task.md
.sdd/archive-isaac-sim/: STATE.md  plan.md  spec.md  status.json  task.md
.sdd/archive-mujoco-render/: plan.md  spec.md  status.json  task.md
.sdd/archive-v2.0-vectorengine/: plan.md  status.json
.sdd/archive-v2.1-pick/: spec.md
.sdd/archive-v2.2/: DEBUG.md  plan.md  spec.md  status.json  task.md
.sdd/archive-v2.3/: NEXT_SESSION.md  plan.md
.sdd/archive-v2.4-perception-overhaul/: plan.md  spec.md  status.json  task.md  v24-env-probe.md
.sdd/executive-briefs/: completion-report.md
.sdd/summaries/: hotfix-generic-query.md  task-T1.md  task-T10.md  task-T11.md  task-T12.md  task-T13.md  task-T2.md  task-T3.md  task-T4.md  task-T5.md  task-T6.md  task-T7.md  task-T8.md  task-T9.md  wave-1.md  wave-2.md  wave-3.md  wave-4.md
agents/devlog/: status.md  tasks.md
config/: default.yaml  far_go2_indoor.yaml  local_planner_go2.yaml  nav.yaml  nav2_go2.rviz  room_layout.yaml  tare_go2_indoor.yaml  vnav.rviz
docker/isaac-sim/: Dockerfile  cyclonedds.xml  docker-compose.yaml  docker-entrypoint.sh
docs/: ADR-002-skill-manifest-protocol.md  architecture.md  cli-tool-system.md  dependencies.md  sysnav_simulation.md  testing-guide.md  v2.2_live_repl_checklist.md  v2.3_live_repl_checklist.md  vgg-design-spec.md
docs/architecture-decisions/: ADR-003-hardware-abstraction-layer.md  ADR-005-isaac-sim-integration.md
examples/: custom_skill.py  no_llm.py  quickstart.py  ros2_mode.py  simulation.py
gazebo/config/: bridge.yaml
gazebo/worlds/: empty_room.sdf
scripts/: add_spdx_headers.py  agent_nav_demo.py  diag_tare.sh  go2_demo.py  go2_nav_bridge.py  go2_vnav_bridge.py  harness_run.py  launch_bridge.sh  launch_explore.sh  launch_gazebo.sh  launch_isaac.sh  launch_nav2.sh  launch_nav_explore.sh  launch_nav_only.sh  launch_slam.sh  launch_vnav.sh  monitor_vgraph.py  run_agent_nav.sh  smoke_sysnav_sim.py  stop_gazebo.sh  stop_isaac.sh  test_fullstack.sh  test_integration.sh  test_nav2_integration.sh  test_slam.sh  test_tare_dataflow.sh  test_visualization.sh  test_vnav.sh  test_vnav_e2e.sh  verify_loco_pick_place.py  verify_perception_pick.py  verify_pick_top_down.py
tests/: __init__.py  verify_compat.py
tests/e2e/: test_explore_navigate_e2e.py
tests/harness/: conftest.py  nav_debug_helpers.py  test_abort.py  test_agent_go2.py  test_depth_projection_groundtruth.py  test_level0_physics.py  test_level0_vlm_api.py  test_level10_auto_look.py  test_level11_mobile_loop.py  test_level12_tare_chain.py  test_level13_depth.py  test_level15_auto_look_detector.py  test_level15_detection_integration.py  test_level16_explore_nav.py  test_level17_tare_warmup.py  test_level18_wall_clearance.py  test_level19_detector_cleanup.py  test_level1_camera_vlm.py  test_level1_standing.py  test_level20_sensor_pipeline.py  test_level21_terrain_classification.py  test_level22_path_planning.py  test_level23_tare_exploration.py  test_level24_path_follower.py  test_level25_nav_integration.py  test_level26_vlm_reliability.py  test_level27_stuck_escape.py  test_level28_nav_wall_clearance.py  test_level29_pre_explore_nav.py  test_level2_scene_skills.py  test_level2_walking.py  test_level30_terrain_persist.py  test_level31_wall_escape.py  test_level32_follower_precision.py  test_level33_nav_pipeline.py  test_level34_door_learning.py  test_level34b_nearest_room.py  test_level34c_explore_door_learning.py  test_level35_hardcode_free_nav.py  test_level35b_proxy_door_chain.py  (+45 more)
tests/integration/: __init__.py  test_agent.py  test_go2_camera_pose.py  test_go2_integration.py  test_pick_skill.py  test_sensors_against_world.py  test_sim_pybullet.py  test_sim_tool_perception_wire.py  test_xmat_rep103_regression.py
tests/skills/: test_mobile_pick.py  test_mobile_place.py  test_pick_top_down.py  test_place_top_down.py
tests/unit/: __init__.py  test_agent_hal.py  test_agent_loop.py  test_agent_loop_integration.py  test_agent_loop_prompt.py  test_agent_loop_skeleton.py  test_agent_loop_types.py  test_agent_run_goal.py  test_arm_protocol.py  test_backend_switch.py  test_base_protocol.py  test_calibration.py  test_calibration_enhanced.py  test_calibration_transform.py  test_calibration_wizard.py  test_cli.py  test_config.py  test_dashboard.py  test_decide_next_action.py  test_docker_config.py  test_execute_skill.py  test_executor.py  test_frame_renderer.py  test_gazebo_backend.py  test_gazebo_bridge.py  test_gazebo_controller.py  test_gazebo_launch.py  test_gazebo_model.py  test_gazebo_proxy.py  test_gazebo_scripts.py  test_gazebo_world.py  test_go2_skills.py  test_ik_solver.py  test_isaac_arm_proxy.py  test_isaac_e2e_chain.py  test_isaac_sim_proxy.py  test_joint_config.py  test_llm_parse.py  test_llm_prompts.py  test_llm_provider.py  (+33 more)
tests/vcli/: test_engine_vgg_context.py
vector_os/: __init__.py  version.py
vector_os/cli/: calibration_wizard.py  dashboard.py  simple.py
vector_os/core/: __init__.py  agent.py  executor.py  skill.py  types.py  world_model.py
vector_os/hardware/: arm.py  gripper.py
vector_os/llm/: __init__.py  base.py  claude.py  local.py  openai_compat.py  prompts.py
vector_os/perception/: __init__.py  base.py  calibration.py  pipeline.py  pointcloud.py  realsense.py  tracker.py  vlm.py
vector_os/ros2/: __init__.py
vector_os/skills/: __init__.py  detect.py  home.py  pick.py  place.py  scan.py
vector_os_nano/: __init__.py  version.py
vector_os_nano/cli/: __init__.py  calibration_wizard.py  dashboard.py  frame_renderer.py  simple.py
vector_os_nano/core/: __init__.py  agent.py  agent_loop.py  config.py  executor.py  memory.py  mobile_agent_loop.py  nav_client.py  scene_graph.py  skill.py  spatial_memory.py  tool_agent.py  types.py  world_model.py
(+236 files in other folders)
